--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Calculator</h2>
+    <!-- <h2>Calculator</h2> -->
+    <div class="flex-container">
+            <input type="text" id="display" readonly>
+            <div class="btn">
+                <button type="button" value="0">0</button>
+                <button type="button" value="1">00</button>
+                <button type="button" value="1">1</button>
+                <button type="button" value="1">2</button>
+                <button type="button" value="1">3</button>
+                <button type="button" value="1">4</button>
+                <button type="button" value="1">5</button>
+                <button type="button" value="1">6</button>
+                <button type="button" value="1">7</button>
+                <button type="button" value="1">8</button>
+                <button type="button" value="1">9</button>            
+                <button type="button" value=".">.</button>            
+                <button type="button" value="+">+</button>            
+                <button type="button" value="-">-</button>            
+                <button type="button" value="*">*</button>            
+                <button type="button" value="/">/</button>
+            </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
