add javaScript functions on each button to perfrom calculations

--- a/index.html
+++ b/index.html
@@ -9,24 +9,28 @@
 <body>
     <!-- <h2>Calculator</h2> -->
     <div class="flex-container">
-            <input type="text" id="display" readonly>
+            <input class="disp" type="text" id="display" readonly>
             <div class="btn">
-                <button type="button" value="0">0</button>
-                <button type="button" value="1">00</button>
-                <button type="button" value="1">1</button>
-                <button type="button" value="1">2</button>
-                <button type="button" value="1">3</button>
-                <button type="button" value="1">4</button>
-                <button type="button" value="1">5</button>
-                <button type="button" value="1">6</button>
-                <button type="button" value="1">7</button>
-                <button type="button" value="1">8</button>
-                <button type="button" value="1">9</button>            
-                <button type="button" value=".">.</button>            
-                <button type="button" value="+">+</button>            
-                <button type="button" value="-">-</button>            
-                <button type="button" value="*">*</button>            
-                <button type="button" value="/">/</button>
+                <button class="myBtn" type="button" value="0">0</button>
+                <button class="myBtn" type="button" value="00">00</button>
+                <button class="myBtn" type="button" value="1">1</button>
+                <button class="myBtn" type="button" value="2">2</button>
+                <button class="myBtn" type="button" value="3">3</button>
+                <button class="myBtn" type="button" value="4">4</button>
+                <button class="myBtn" type="button" value="5">5</button>
+                <button class="myBtn" type="button" value="6">6</button>
+                <button class="myBtn" type="button" value="7">7</button>
+                <button class="myBtn" type="button" value="8">8</button>
+                <button class="myBtn" type="button" value="9">9</button>            
+                <button class="myBtn" type="button" value=".">.</button>        
+                <button class="myBtn" type="button" value="+">+</button>            
+                <button class="myBtn" type="button" value="-">-</button>            
+                <button class="myBtn" type="button" value="*">*</button>            
+                <button class="myBtn" type="button" value="/">/</button>
+                <button class="myBtn" type="button" value="%">%</button>
+                <button class="myBtn" type="button" value="=">=</button>
+                <button class="myBtn" type="button" value="del">DEL</button>
+                <button class="myBtn" type="button" value="ac">AC</button>
             </div>
     </div>
     <script src="app.js"></script>
